syntax = "proto3";

package workflows.v1;

import "google/protobuf/timestamp.proto";

import "workflow.proto";
import "forge_carbide.proto";

option go_package = "github.com/nvidia/carbide-rest/workflow-schema/proto";

// SkuInventory - inventory info of all SKUs periodically collected
message SkuInventory {
  // Status of Inventory
  InventoryStatus inventory_status = 1;
  // Status message
  string status_msg = 2;
  // Reported timestamp of SKU inventory
  google.protobuf.Timestamp timestamp = 3;
  // List of SKU
  repeated forge.Sku skus = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
